--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "adarsh",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "env": "^0.0.2",
